test/arrays/diten/array-as-vec-bounds-checking.0-2.good
array-as-vec-bounds-checking.chpl:14: error: halt reached - pop_front called on empty array
